--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,6 @@
 <header class="header">
   <div class="container">
+    header
     <nav class="nav">
       <a class="nav-logo" href="./index.html" aria-label="Site logo">
         <svg class="nav-logo-icon" width="100" height="30">
